logs/erp5.util.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/erp5'...
Listing './lib/python3.5/site-packages/erp5/tests'...
Compiling './lib/python3.5/site-packages/erp5/tests/testERP5TestNode.py'...
***   File "./lib/python3.5/site-packages/erp5/tests/testERP5TestNode.py", line 56
    print "TESTNODE LOG : %r, %r" % (arg, kw)
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/erp5/util'...
Listing './lib/python3.5/site-packages/erp5/util/benchmark'...
Compiling './lib/python3.5/site-packages/erp5/util/benchmark/argument.py'...
***   File "./lib/python3.5/site-packages/erp5/util/benchmark/argument.py", line 60
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/erp5/util/benchmark/performance_tester.py'...
***   File "./lib/python3.5/site-packages/erp5/util/benchmark/performance_tester.py", line 261
    except KeyboardInterrupt, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/erp5/util/benchmark/process.py'...
***   File "./lib/python3.5/site-packages/erp5/util/benchmark/process.py", line 89
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/erp5/util/benchmark/report.py'...
***   File "./lib/python3.5/site-packages/erp5/util/benchmark/report.py", line 158
    raise AssertionError, "ERROR: Result labels: %s != %s" % \
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/erp5/util/scalability'...
Listing './lib/python3.5/site-packages/erp5/util/taskdistribution'...
Compiling './lib/python3.5/site-packages/erp5/util/taskdistribution/__init__.py'...
***   File "./lib/python3.5/site-packages/erp5/util/taskdistribution/__init__.py", line 93
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/erp5/util/testbrowser'...
Compiling './lib/python3.5/site-packages/erp5/util/testbrowser/browser.py'...
***   File "./lib/python3.5/site-packages/erp5/util/testbrowser/browser.py", line 236
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/erp5/util/testnode'...
Compiling './lib/python3.5/site-packages/erp5/util/testnode/SlapOSControler.py'...
***   File "./lib/python3.5/site-packages/erp5/util/testnode/SlapOSControler.py", line 250
    os.chmod(self.software_root, 0750)
                                    ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/erp5/util/testnode/SlapOSMasterCommunicator.py'...
***   File "./lib/python3.5/site-packages/erp5/util/testnode/SlapOSMasterCommunicator.py", line 50
    except SAFE_RPC_EXCEPTION_LIST, e:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/erp5/util/testnode/Updater.py'...
***   File "./lib/python3.5/site-packages/erp5/util/testnode/Updater.py", line 90
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/erp5/util/testnode/js-logtail'...
Listing './lib/python3.5/site-packages/erp5/util/testnode/template'...
Compiling './lib/python3.5/site-packages/erp5/util/testnode/testnode.py'...
***   File "./lib/python3.5/site-packages/erp5/util/testnode/testnode.py", line 197
    except SubprocessError, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/erp5/util/testsuite'...
Compiling './lib/python3.5/site-packages/erp5/util/testsuite/__init__.py'...
***   File "./lib/python3.5/site-packages/erp5/util/testsuite/__init__.py", line 76
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/erp5/util/timinglogparser'...
Compiling './lib/python3.5/site-packages/erp5/util/timinglogparser/__init__.py'...
***   File "./lib/python3.5/site-packages/erp5/util/timinglogparser/__init__.py", line 164
    except Exception, reason:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/erp5/util/timinglogplotter'...
Compiling './lib/python3.5/site-packages/erp5/util/timinglogplotter/__init__.py'...
***   File "./lib/python3.5/site-packages/erp5/util/timinglogplotter/__init__.py", line 124
    print 'Loading %s...' % (file_name, )
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/erp5/util/webchecker'...
Compiling './lib/python3.5/site-packages/erp5/util/webchecker/__init__.py'...
***   File "./lib/python3.5/site-packages/erp5/util/webchecker/__init__.py", line 562
    print parser.print_help()
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/erp5.util-0.4.50.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
